--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -53,7 +53,7 @@
     overflow: hidden;
   }
   canvas {
-    display:block;
+
     // display: none;
     position: absolute;
     top: 0;
@@ -103,19 +103,25 @@
       // height: 100%;
       // width: 100%;
 
-      [data-fade-in-id] {
+      .hidden {
         opacity: 0;
       }
       main {
 
         flex: 1;
 
-        padding: 156px 20px 70px;
+        padding: 156px 0 0;
         text-align: center;
-        margin: 0 auto;
+
+
+        .circle {
+          display: none;
+          visibility: hidden;
+        }
         .row {
           display: flex;
           flex-direction: row;
+          padding-bottom: 70px;
         }
         .flex {
           flex: 1;
@@ -133,7 +139,7 @@
           background-color: #FF9181;
           position: relative;
           // margin: 10px 0;
-          transition: width 1s ease;
+          transition: width .6s ease;
 
           &:after {
             content: "";
@@ -152,30 +158,7 @@
           }
         }
         .vline {
-
-          visibility: hidden;
-          width: 1px;
-          height: 0;
-          background-color: #FF9181;
-          position: relative;
-          // margin: 0 10px;
-          transition: height 1s ease;
-
-          &:after {
-            content: "";
-            position: absolute;
-            bottom: -2px;
-            right: -2px;
-            width: 5px;
-            height: 5px;
-            border-radius: 100%;
-            background-color: #FF9181;
-          }
-
-          &.animation {
-            visibility: visible;
-            height: 99%;
-          }
+          display: none;
         }
         h1 {
           -webkit-background-clip: text;
@@ -195,6 +178,7 @@
           color: #424141;
           max-width: 450px;
           text-align: left;
+          margin: 0 auto;
           &:first-of-type {
             padding: 38px 0 26px;
           }
@@ -214,6 +198,11 @@
           label {
             font: 2rem BPGWeb001Caps;
             color: #606060;
+          }
+          .subscribe-row {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
           }
           ul {
             display: flex;
@@ -253,7 +242,7 @@
             input[type="email"] {
               font: 2rem RobotoLight;
               color: #9B9B9B;
-              flex: 1;
+              // flex: 1;
               border-top-left-radius: 19px;
               border-top-right-radius: 19px;
               padding: 12px 10px 12px 20px;
@@ -281,6 +270,9 @@
               cursor: pointer;
             }
           }
+        }
+        .row {
+          padding: 0 20px 70px 20px;
         }
       }
       footer {
@@ -317,16 +309,13 @@
         }
       }
     }
-    .dummy {
-      display: none;
-    }
   }
 
   @media(min-width:576px){
     .app {
       .content {
         main {
-          padding: 156px 0 70px; // 60px
+          padding: 156px 0 0; // 60px
           .register {
             font: 4rem BPGWeb001Caps;
           }
@@ -361,45 +350,125 @@
     }
   }
   @media(min-width:992px){
-    .app {
-      // display:flex;
-      // flex-direction: row;
+  }
 
+
+  @media(min-width:1200px) {
+    // canvas {
+    //   display:block;
+    // }
+    .app {
       .content {
         margin-right: 50%;
-        // flex: 1;
         main {
+          margin: 0 auto;
+          position: relative;
           margin: 0;
           text-align: left;
+          .vline {
+            display: block;
+            visibility: hidden;
+            width: 1px;
+            height: 0;
+            background-color: #FF9181;
+            position: relative;
+            // margin: 0 10px;
+            transition: height .6s ease;
+
+            &:after {
+              content: "";
+              position: absolute;
+              bottom: -2px;
+              right: -2px;
+              width: 5px;
+              height: 5px;
+              border-radius: 100%;
+              background-color: #FF9181;
+            }
+
+            &.animation {
+              visibility: visible;
+              height: 100%;
+            }
+          }
+          .row {
+            padding-bottom: 115px;
+          }
           .vizhack2017 {
             display: block;
             font: 2.6rem BebasNeueBold;
             color: #fff;
             // margin: 50px 0 0 45px;
             position: absolute;
-            top: 50px;
+            top: 60px;
             left: 45px;
           }
           .source {
-            display: block;
+            display: none;
             font: 1.4rem DejaVuNeueExtraLight;
             color: #fff;
-            position: absolute;
+            position: fixed;
             top: 15px;
             right: 25px;
             opacity: .8;
             text-align: right;
-
+            &.show {
+              display: block;
+            }
+          }
+          .circle {
+            display: block;
+            position: absolute;
+            width: 0px;
+            height: 0px;
+            top: -132px;
+            left: -102px;
+            transition: all .6s ease-in-out;
+            background-color: rgb(254,183,79);
+            border-radius: 100%;
+            overflow: hidden;
+            &.show {
+              visibility: visible;
+              width: 324px;
+              height: 324px;
+            }
+          }
+          h1 {
+            padding-bottom: 14px;
+          }
+          p {
+            margin: 0;
+            &:first-of-type {
+              padding: 56px 0 30px;
+            }
           }
           h1 {
             font: 6rem BebasNeue;
+            padding-left: 252px;
           }
           h1 b {
             font: 6rem BebasNeueBold;
 
           }
+          .space {
+            padding: 0 31px 0 230px;
+          }
           .register {
             font: 2.75rem BPGWeb001Caps;
+            margin: 70px 0 150px;
+          }
+          .subscribe {
+            padding-left: 9px;
+            .subscribe-row {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              padding: 26px 0 15px;
+
+              .subscribe-languages {
+                padding: 0 23px 0 0;
+              }
+            }
           }
         }
         footer {
@@ -414,16 +483,9 @@
             }
           }
         }
-
-      }
-      .dummy {
-        display: initial;
-        flex: 1;
       }
     }
   }
-
-
 /* gradient */
 
   .gradient {
