update text and css

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -202,6 +202,9 @@
             padding: 38px 0 26px;
           }
         }
+        p b {
+          font: 1.8rem DejaVuNeue;
+        }
 
         .register {
           display: inline-block;
@@ -259,7 +262,7 @@
               outline: none;
             }
             input[type="email"] {
-              font: 2rem RobotoLight;
+              font: 2rem DejaVuNeueExtraLight;
               color: #9B9B9B;
               // flex: 1;
               border-top-left-radius: 19px;
@@ -281,7 +284,7 @@
               /* margin: 12px 17px; */
             }
             input[type="submit"] {
-              font: 2rem RobotoLight;
+              font: 2rem DejaVuNeueExtraLight;
               color: #606060;
               border-bottom-left-radius: 19px;
               border-bottom-right-radius: 19px;
@@ -417,12 +420,12 @@
           }
           .vizhack2017 {
             display: block;
-            font: 2.6rem BebasNeueBold;
+            font: 2.0rem BebasNeueBold;
             color: #fff;
             // margin: 50px 0 0 45px;
             position: absolute;
-            top: 60px;
-            left: 45px;
+            top: 35px;
+            left: 25px;
           }
           .source {
             display: none;
@@ -442,16 +445,16 @@
             position: absolute;
             width: 0px;
             height: 0px;
-            top: -132px;
-            left: -82px;
+            top: -92px;
+            left: -57px;
             transition: all .6s ease-in-out;
             background-color: rgb(254,183,79);
             border-radius: 100%;
             overflow: hidden;
             &.show {
               visibility: visible;
-              width: 290px;
-              height: 290px;
+              width: 203px;
+              height: 203px;
             }
           }
           h1 {
