Sovlab logo added

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -508,6 +508,9 @@
               a.forset {
                 margin-top: 18px;
               }
+              a.sovlab {
+                margin-top: 14px;
+              }
             }
           }
         }
