Add Tbilisi City Hall as partner, update content text

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -251,6 +251,7 @@
           }
           &:lang(en) {
             font: 4.1rem SourceSansProSemiBold;
+            padding: 16px 45px;
           }
         }
         .subscribe {
@@ -606,15 +607,20 @@
             align-items: flex-start;
             margin-left: 86px;
             li {
-              flex: 1;
+              margin: 0 50px;
+              text-align: center;
+              // flex: 1;
               &:not(last-child) {
                 // margin-right: 120px;
               }
+              a {
+                margin: 0 10px;
+              }
               a.forset {
-                margin-top: 18px;
+                margin-top: 14px;
               }
               a.sovlab {
-                margin-top: 14px;
+                margin-top: 10px;
               }
               .items {
                 display: flex;
